test/llvm/macros/complex-var-is-call.good
complex-var-is-call.chpl:2: error: Could not find C variable ComplexVar - perhaps it is a complex macro?
