test/llvm/macros/complex-var-is-call.chpl
use SysCTypes;
extern var ComplexVar:c_int;

proc main() {
  var i = ComplexVar;
  writeln(i);
}
